--- a/Cv.Aspire.ApiService/Properties/launchSettings.json
+++ b/Cv.Aspire.ApiService/Properties/launchSettings.json
@@ -8,7 +8,8 @@
       "launchUrl": "weatherforecast",
       "applicationUrl": "http://localhost:5562",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_CLI_TELEMETRY_OPTOUT": "1"
       }
     },
     "https": {
@@ -18,7 +19,8 @@
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:7513;http://localhost:5562",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DOTNET_CLI_TELEMETRY_OPTOUT": "1"
       }
     }
   }
