Assistent pagina toegevoegd

--- a/Cv.Aspire.AppHost/appsettings.Development.json
+++ b/Cv.Aspire.AppHost/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Parameters": {
+    "chatDeploymentName": "gpt-4o",
+    "chatEndpoint": "https://portfolio-azure-openai.openai.azure.com/"
   }
 }
