--- a/Cv.Aspire.Web/Cv.Aspire.Web.csproj
+++ b/Cv.Aspire.Web/Cv.Aspire.Web.csproj
@@ -14,4 +14,9 @@
     <Folder Include="wwwroot\cv\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.12.0" />
+    <PackageReference Include="Microsoft.SemanticKernel" Version="1.17.2" />
+  </ItemGroup>
+
 </Project>
