--- a/Cv.Aspire.Web/Cv.Aspire.Web.csproj
+++ b/Cv.Aspire.Web/Cv.Aspire.Web.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.12.0" />
+    <PackageReference Include="Markdig" Version="0.37.0" />
     <PackageReference Include="Microsoft.SemanticKernel" Version="1.17.2" />
   </ItemGroup>
 
